--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Find your next consultant from ALTEN Denmark ApS on this page"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!--
       manifest.json provides metadata used when your web app is installed on a
